# SquashCoachingCopilot

./: .gitattributes  .gitignore  MANIFEST.in  README.md  pyproject.toml
api/: .dockerignore  .env  .gitignore  Dockerfile  QUICKSTART.md  README.md  api_main.py  config.py  docker-compose.yml  main.py  models.py  pipeline.py  requirements.txt  results.json  test_api.sh  worker.py
api/analysis/: __init__.py  coaching_analyzer.py
api/data/: __init__.py  data_collector.py  data_models.py  post_processors.py
api/orchestration/: __init__.py  pipeline_orchestrator.py
api/video_io/: __init__.py  video_handler.py  video_reader.py  video_writer.py
api/visualization/: visualizer.py
app/: Dockerfile  IMPLEMENTATION_STATUS.md  docker-compose.yml  package-lock.json  package.json
app/app/: globals.css  layout.tsx  page.tsx
app/components/dashboard/: OverviewTab.tsx  RallyByRallyTab.tsx  RallyCard.tsx  RallyDurationChart.tsx  RallyTimeline.tsx  StatsCard.tsx  StrokeDistributionChart.tsx  VideoPlayer.tsx  VideoPlayerTab.tsx
app/components/ui/: Button.tsx  Card.tsx  LoadingSpinner.tsx  Slider.tsx  Tabs.tsx
app/components/upload/: UploadProgress.tsx  VideoDropzone.tsx
app/hooks/: useUpload.ts
app/lib/: api.ts  types.ts  utils.ts
cv-module/digitization/detection-tracking/court-detection/pipeline/: README.md  pyproject.toml  setup.py
cv-module/digitization/detection-tracking/court-detection/pipeline/court_calibration/: __init__.py  utils.py
cv-module/digitization/detection-tracking/court-detection/pipeline/court_detection_pipeline/: __init__.py  config.json  court_calibrator.py  utils.py
cv-module/digitization/detection-tracking/court-detection/pipeline/court_detection_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cv-module/digitization/detection-tracking/court-detection/pipeline/tests/: README.md  evaluator.py
cv-module/digitization/event-recognition/stroke-detection/pipeline/: README.md  pyproject.toml  setup.py
cv-module/digitization/event-recognition/stroke-detection/pipeline/stroke_detection/: __init__.py  utils.py
cv-module/digitization/event-recognition/stroke-detection/pipeline/stroke_detection.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cv-module/digitization/event-recognition/stroke-detection/pipeline/stroke_detection_pipeline/: __init__.py  stroke_detector.py
cv-module/digitization/event-recognition/stroke-detection/pipeline/stroke_detection_pipeline.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cv-module/full-pipeline/: ARCHITECTURE.md  QUICK_START.md  README.md  config.json  config.py  court_calibrator.py  pipeline.py  player_tracker.py  test.py  utils.py
cv-module/full-pipeline/analysis/: __init__.py  coaching_analyzer.py  metrics.py  movement_analyzer.py  rally_analyzer.py
cv-module/full-pipeline/data/: __init__.py  data_collector.py  data_models.py  data_plotter.py  post_processors.py  validators.py
cv-module/full-pipeline/orchestration/: __init__.py  pipeline_orchestrator.py  visualizer.py
cv-module/full-pipeline/output/: match_analysis.json  match_analysis.txt
cv-module/full-pipeline/video_io/: __init__.py  video_handler.py  video_reader.py  video_writer.py
cv-module/integration-pipeline/: main.py  rally_state_pipeline-0.1.0-py3-none-any.whl  streamlit_dashboard.py
cv-module/integration-pipeline/configs/: digitization_pipeline_config.json  main_config.json  positioning_analysis_pipeline_config.json
cv-module/integration-pipeline/pipelines/: digitization_pipeline.py  positioning_analysis_pipeline.py
cv-module/integration-pipeline/utilities/: player_tracker.py  tracking_visualizer.py  utils.py
frontend/: BACKEND_ARCHITECTURE.md  PROJECT_DOCUMENTATION.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AnalysisProgress.tsx  VideoUpload.tsx
frontend/components/dashboard/: CourtHeatmap.tsx  OverviewTab.tsx  PlayerAnalysisTab.tsx  RallyByRallyTab.tsx  StatCard.tsx  TabNavigation.tsx  VideoModal.tsx  WallHeatmap.tsx
frontend/lib/: api.ts  courtMetrics.ts  types.ts
modules/ball-detection/: pyproject.toml
modules/ball-detection/ball_tracking/: __init__.py  ball_tracker.py  racket_hit_detector.py  utils.py  wall_hit_detector.py
modules/ball-detection/ball_tracking.egg-info/: SOURCES.txt  requires.txt
modules/ball-detection/ball_tracking/models/tracknet/: tracknet_tracker.py
modules/ball-detection/tests/: README.md  evaluator.py
modules/ball-detection/tests/outputs/video-1/raw/: metrics.txt
modules/ball-detection/tests/outputs/video-5/raw/: metrics.txt
modules/court-detection/court_calibration/: config.json  court_calibrator.py
modules/court-detection/court_calibration.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
modules/court-detection/tests/: config.json
modules/player-detection/player_tracking/: config.json  utils.py
modules/player-detection/player_tracking.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
modules/player-detection/tests/: README.md  evaluator.py
modules/rally-segmentation/: pyproject.toml
modules/rally-segmentation/rally_state_detection/: rally_state_detector.py
modules/rally-segmentation/rally_state_detection.egg-info/: PKG-INFO  top_level.txt
modules/rally-segmentation/rally_state_detection/models/ml/: ml_based_model.py
modules/rally-segmentation/tests/: config.json
modules/rally-segmentation/tests/data/: annotation_pipeline.py
modules/rally-segmentation/tests/outputs/video-2/: metrics.txt
squashcopilot/: __init__.py
squashcopilot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
squashcopilot/annotation/: __init__.py  annotator.py
squashcopilot/common/: __init__.py  constants.py  utils.py
squashcopilot/configs/: annotation.yaml  ball_tracking.yaml  court_calibration.yaml  hit_detection.yaml  pipeline.yaml  player_tracking.yaml  rally_state_detection.yaml  shot_type_classification.yaml  stroke_detection.yaml
squashcopilot/modules/: __init__.py
squashcopilot/pipeline/: README.md  __init__.py  frame_reader.py  pipeline.py
(+990 files in other folders)
