[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rally_state_detection"
version = "0.1.2"
description = "A package for detecting rally states in squash videos"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Youssef Elhagg", email = "yousseframi@aucegypt.edu"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "joblib",
    "xgboost",
]

[project.urls]
Homepage = "https://github.com/useframi/SquashCoachingCopilot"

[tool.setuptools]
packages = ["rally_state_detection"]

[tool.setuptools.exclude-package-data]
"*" = ["tests*"]

[tool.setuptools.package-data]
rally_state_detection = [
    "config.json",
    "models/ml/weights/*.pkl",
]
