[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "court_calibration"
version = "0.1.1"
description = "A package for detecting and calibrating the court in squash videos"
readme = "README.md"
authors = [
    {name = "Youssef Elhagg", email = "yousseframi@aucegypt.edu"}
]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy",
    "inference",
    "opencv-python",
]

[project.urls]
Homepage = "https://github.com/useframi1/SquashCoachingCopilot"

[tool.setuptools]
packages = ["court_calibration"]

[tool.setuptools.exclude-package-data]
"*" = ["tests*"]

[tool.setuptools.package-data]
court_calibration = [
    "config.json",
    "model/weights/*.pt",
]
