[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stroke_detection"
version = "0.1.0"
description = "A package for detecting the strokes in squash videos"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Youssef Elhagg", email = "yousseframi@aucegypt.edu"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy",
    "opencv-python",
    "torch",
]

[project.urls]
"Homepage" = "https://github.com/useframi1/SquashCoachingCopilot"

[tool.setuptools]
packages = ["stroke_detection"]

[tool.setuptools.package-data]
stroke_detection = [
    "config.json",
    "model/weights/*.pt",
]
